--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,11 @@ add_executable(${PROJECT_NAME} src/main.cpp
         src/mesh.cpp
         include/mesh.h
         src/shader.cpp
-        include/shader.h)
+        include/shader.h
+        include/NoiseGenerator.h
+        src/NoiseGenerator.cpp
+        include/PoissonGenerator.h
+        src/PoissonGenerator.cpp)
 
 target_link_libraries(${PROJECT_NAME} glfw)
 target_link_libraries(${PROJECT_NAME} OpenGL::GL)
